# webconsole/src/api/models/viewer-device.ts
@@ -1,0 +1,64 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * rustdesk-api
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 3.2.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+ /**
+ * `GET /api/viewers` row: a machine known only from its users' logins. Times are Unix seconds.
+ *
+ * @export
+ * @interface ViewerDevice
+ */
+export interface ViewerDevice {
+
+    /**
+     * @type {string}
+     * @memberof ViewerDevice
+     */
+    id: string;
+
+    /**
+     * @type {string}
+     * @memberof ViewerDevice
+     */
+    hostname: string;
+
+    /**
+     * @type {string}
+     * @memberof ViewerDevice
+     */
+    os: string;
+
+    /**
+     * @type {string}
+     * @memberof ViewerDevice
+     */
+    user?: string | null;
+
+    /**
+     * @type {number}
+     * @memberof ViewerDevice
+     */
+    first_seen: number;
+
+    /**
+     * @type {number}
+     * @memberof ViewerDevice
+     */
+    last_login: number;
+
+    /**
+     * @type {number}
+     * @memberof ViewerDevice
+     */
+    last_seen: number;
+}
