# webconsole/src/api/models/viewer-list.ts
@@ -1,0 +1,35 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * rustdesk-api
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 3.2.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import { ViewerDevice } from './viewer-device';
+ /**
+ * 
+ *
+ * @export
+ * @interface ViewerList
+ */
+export interface ViewerList {
+
+    /**
+     * @type {number}
+     * @memberof ViewerList
+     */
+    total: number;
+
+    /**
+     * @type {Array<ViewerDevice>}
+     * @memberof ViewerList
+     */
+    data: Array<ViewerDevice>;
+}
